Version 1.80 beta 9
-------------
Added configuration options for different game languages
Automatically download ocr data on switching language

Version 1.80 beta 8
-------------
Add missing dependencies

Version 1.80 beta 7
-------------
Handle Windows global/per device scaling
Removed initial search for download panel arrow, we know where it is

Version 1.80 beta 6
-------------
AR colorpicker
render caching
- it takes up to a second to render the overlay, so if you have a scrollbar in the menu(5/6 items) you will get multiple renders
- when image is used from cache it is almost showing at native game speed.
- OCR operations are done once per item and remembered
improved positioning of overlay

Version 1.80 beta 5
-------------
extract required libraries to temp folder to do OCR
update style with perspective transform
speed optimizations to menu responsiveness, text extraction and time to render.
reduced CPU load and memory consumption

Version 1.80 beta 4
-------------
additional logging
faster image capturing method

Version 1.80 beta 3
-------------
Auto disable AR on fullscreen mode
Remove dependency on Tesseract installation

Version 1.80 beta 2
-------------
Improved detection for download panel

Version 1.80 beta 1
-------------
AR Overlay

Version 1.79
-------------
Fix statusbar hidden label taking up space
Fix fleetcarrier amounts remaining 0

Version 1.78
-------------
Show engineer unlock blueprints green when requirements are met. (B3, C5, D1.2, D2)
Improve shutdown closing active threads before exit
Add upgrade suit and upgrade weapon event handling
Settings - Try to initialize journalfolder select to existing selection
Added melee damage values to loadout
Added filters for fleetcarrier and backpack to material overview
Added yellow highlight for wishlistmaterials that have the required amount in total, but not in the shiplocker
Added setting to connect the app with Frontier API