@@ -1,3 +1,6 @@
+wrapper {
+    gradleVersion "7.4.2"
+}
 task copyInstaller(type: Copy) {
     from 'bootstrap/build/jpackage/'
     into 'output'
